# astrelis

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  ;  CMakeLists.txt  Doxyfile  README.md  compile_commands.json  imgui.ini
Core/: CMakeLists.txt
Core/src/NebulaCore/: Log.cpp
Core/src/NebulaCore/Util/: Assert.hpp  Debug.hpp  Pointer.hpp  Result.hpp
Editor/: CMakeLists.txt
Editor/ShaderCompiler/: CMakeLists.txt
Editor/ShaderCompiler/src/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderConductor.cpp  ShaderConductor.hpp
Editor/src/AstrelisEditor/: Application.cpp  AssetPanel.cpp  AssetPanel.hpp  Console.cpp  Console.hpp  EditorLayer.cpp  EditorLayer.hpp  FileTree.cpp  FileTree.hpp
Editor/src/EditorSetup/: Setup.cpp
Editor/src/NebulaEditor/: Application.cpp
Editor/src/Pulsar/: Application.cpp  AssetPanel.cpp  AssetPanel.hpp  Console.cpp  Console.hpp  EditorLayer.cpp  EditorLayer.hpp  FileTree.cpp  FileTree.hpp  GamePreview.cpp  GamePreview.hpp
Engine/: CMakeLists.txt
Engine/benchmarks/: CMakeLists.txt
Engine/benchmarks/src/: BM_Pointer.cpp  BM_Result.cpp
Engine/src/Astrelis/: Astrelis.hpp
Engine/src/Astrelis/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  Entrypoint.hpp  Geometry.hpp  GlobalConfig.cpp  GlobalConfig.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Math.hpp  Pointer.hpp  Profiler.hpp  Result.hpp  Time.cpp  Time.hpp  Types.hpp  Window.cpp  Window.hpp
Engine/src/Astrelis/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/src/Astrelis/IO/: File.cpp  File.hpp  Image.cpp  Image.hpp
Engine/src/Astrelis/Renderer/: BaseRenderer.cpp  BaseRenderer.hpp  BindingDescriptor.hpp  Camera.hpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsPipeline.hpp  IndexBuffer.hpp  Mesh.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  ShaderFormat.hpp  TextureImage.hpp  TextureSampler.hpp  TilemapRenderer.cpp  TilemapRenderer.hpp  UniformBuffer.hpp  Vertex.hpp  VertexBuffer.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
Engine/src/Astrelis/Scene/: BaseComponent.hpp  Material.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  TransformComponent.hpp  VoxelScene.hpp
Engine/src/Platform/GLFW/: GLFWWindowHelper.cpp  GLFWWindowHelper.hpp
Engine/src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
Engine/src/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.hpp
Engine/src/Platform/Metal/: MetalContext.hpp  MetalContext.mm  MetalGraphicsContext.hpp  MetalGraphicsContext.mm
Engine/src/Platform/OpenGL/: GLAPI.cpp  GLAPI.hpp  GLEnum.cpp  GLEnum.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLShader.cpp  GLShader.hpp  GLVertexArray.cpp  GLVertexArray.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp
Engine/src/Platform/Vulkan/: Vulkan2DRendererAPI.cpp  Vulkan2DRendererAPI.hpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp  VulkanImGuiBackend.cpp  VulkanImGuiBackend.hpp  VulkanRenderSystem.cpp  VulkanRenderSystem.hpp  VulkanRendererHelper.cpp  VulkanRendererHelper.hpp
Engine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Engine/tests/: CMakeLists.txt
Engine/tests/src/: PointerTest.cpp  Renderer2DTest.cpp  ResultTest.cpp
NebulaCore/: CMakeLists.txt
NebulaCore/benchmarks/: CMakeLists.txt
NebulaCore/benchmarks/src/: BMLogger.cpp  BMPointer.cpp  BMResult.cpp
NebulaCore/src/NebulaCore/: Assert.hpp  Core.hpp  Linkage.hpp  Log.cpp  Log.hpp  Result.hpp  Util.hpp
NebulaCore/src/NebulaCore/Log/: Log.cpp  Log.hpp
NebulaCore/tests/: AssertionTests.cpp  CMakeLists.txt  NebulaCoreTests[1]_include.cmake
NebulaCore/tests/src/: PointerTest.cpp  ProfilingTest.cpp  ResultTest.cpp
NebulaEditor/: CMakeLists.txt
NebulaEditor/src/NebulaEditor/: NebulaEditor.cpp
NebulaEngine/: CMakeLists.txt
NebulaEngine/pch/: Nebulapch.cpp  Nebulapch.hpp
NebulaEngine/tests/: CMakeLists.txt
NebulaEngine/tests/src/: PointerTest.cpp  Renderer2DTest.cpp  ResultTest.cpp
NebulaGraphics/: CMakeLists.txt
NebulaGraphics/Core/: CMakeLists.txt
NebulaGraphics/Metal/: CMakeLists.txt
NebulaGraphics/OpenGL/: CMakeLists.txt
NebulaGraphics/OpenGL/tests/: CMakeLists.txt  WindowTest.cpp
NebulaGraphics/Renderer/: CMakeLists.txt
NebulaGraphics/Tests/: CMakeLists.txt
NebulaGraphics/Tests/mock/: WindowMock.cpp  WindowMock.hpp
NebulaGraphics/Tests/src/: WindowTest.cpp
NebulaIO/: CMakeLists.txt
NebulaIO/src/NebulaIO/: Core.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp
NebulaRenderer/: CMakeLists.txt
NebulaRenderer/src/NebulaRenderer/: Renderer.hpp
NebulaShaders/: CMakeLists.txt  Design.md  ShaderFormat.md
NebulaShaders/Builder/: CMakeLists.txt
NebulaShaders/Builder/exec/: Application.cpp
NebulaShaders/Builder/tests/: BuilderGlslTests.cpp  CMakeLists.txt
NebulaShaders/CLITool/: Arguments.md  CMakeLists.txt
NebulaShaders/Common/: CMakeLists.txt
NebulaShaders/Compiler/: CMakeLists.txt
NebulaShaders/Compiler/specs/: Lexer.md  README.md
NebulaShaders/Compiler/tests/: CMakeLists.txt  CompilerTests.cpp  LexerFuzz.cpp
NebulaShaders/Conductor/: CMakeLists.txt
NebulaShaders/Conductor/tests/: CMakeLists.txt  GlslTest.cpp  SpirvTest.cpp  TestSources.hpp
NebulaWindowing/: CMakeLists.txt
NebulaWindowing/src/NebulaWindowing/: Window.hpp  WindowHelper.cpp  WindowHelper.hpp  WindowProps.hpp
PulsarEditor/: CMakeLists.txt
PulsarEditor/src/Pulsar/: Application.cpp  AssetPanel.cpp  AssetPanel.hpp  Console.cpp  EditorLayer.cpp  EditorLayer.hpp  FileTree.cpp  FileTree.hpp  GamePreview.cpp  GamePreview.hpp
Renderer/: CMakeLists.txt
Renderer/src/NebulaRenderer/: Renderer.hpp
Sandbox/: CMakeLists.txt
Sandbox/src/Sandbox/: DebugLayer.cpp  DebugLayer.hpp  SandboxApp.cpp  SandboxApplication.cpp  SandboxApplication.hpp  SandboxLayer.cpp  SandboxLayer.hpp
cmake/: Config.cmake  (+14 more)
examples/: CMakeLists.txt
examples/src/: Application.cpp
(+481 files in other folders)
